[package]
name = "grub_mkconfig_lib"
description = "grub mkconfig lib for Rust!"
repository = "https://github.com/CyanChanges/mkconfig_lib_rs"
version = "0.0.3"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indent = "0.1.1"
shell-quote = { version = "0.5.0", default-features = false }
whoami = "1.4.1"
once_cell = "1.19.0"
